--- a/Recipes/task/build.gradle
+++ b/Recipes/task/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     implementation 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+
 }
