--- a/Recipes/task/src/resources/application.properties
+++ b/Recipes/task/src/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
+logging.level.org.springframework.security = DEBUG
